update the content

--- a/index.html
+++ b/index.html
@@ -96,83 +96,65 @@
                         <div class="card-box">
                             <a href="./frontend-user-guides-post-detail.html#section1" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-03.png" class="card-img" alt="">
+                                    <img src="./images/facility-admin/card-img-01.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">Getting Started</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
+                                    <p class="card-desc">Everything you need to know about signing up, updating your profile and managing your account.</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html#section3" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#sub-section12" class="card">
                                 <div class="card-header">
                                     <img src="./images/user-manual-topics/card-img-02.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Finding a class or activity</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
+                                    <p class="card-title">Booking a class</p>
+                                    <p class="card-desc">Learn how to book a free class and participate in Dubai Fitness Challenge 2021!</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html#section4" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#section3" class="card">
                                 <div class="card-header">
                                     <img src="./images/user-manual-topics/card-img-03.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Booking a class</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
+                                    <p class="card-title">Viewing upcoming bookings</p>
+                                    <p class="card-desc">Check your calendar to view and manage all your upcoming classes.</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html#section5" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#sub-section4" class="card">
                                 <div class="card-header">
                                     <img src="./images/user-manual-topics/card-img-04.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">View your booking Calender</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
+                                    <p class="card-title">Finding you unique QR code</p>
+                                    <p class="card-desc">Find out how to access your unique QR code to check into DFC Fitness Villages.</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html#section6" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#section4" class="card">
                                 <div class="card-header">
                                     <img src="./images/user-manual-topics/card-img-05.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Cancelling a booking</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
+                                    <p class="card-title">Attending an event</p>
+                                    <p class="card-desc">Learn everything you need to know about attending a DFC event this month.</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html#section7" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#sub-section14" class="card">
                                 <div class="card-header">
                                     <img src="./images/user-manual-topics/card-img-06.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Booking a class for a friend</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
+                                    <p class="card-title">Cancelling a booking</p>
+                                    <p class="card-desc">If you can’t attend a booking, we’ll show you how to cancel it.</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html#section8" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#sub-section15" class="card">
                                 <div class="card-header">
                                     <img src="./images/user-manual-topics/card-img-07.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Booking a class for friends/family</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin?</p>
-                                </div>
-                            </a>
-                            <a href="./frontend-user-guides-post-detail.html#section9" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-03.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Attending a class</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                            <a href="./frontend-user-guides-post-detail.html#section2" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-03.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Accessing your QR code</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
+                                    <p class="card-title">Booking a class for a friend</p>
+                                    <p class="card-desc">Learn how to book a class for a friend or family member.</p>
                                 </div>
                             </a>
                         </div>
