--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="external-links-box">
                     <ul class="site-list">
                         <li class="site-item">
-                            <a href="./frontend-user-guides-post-detail.html#section4" class="site-link book-class">Book a class</a>
+                            <a href="https://dfc.coredirection.com/" class="site-link book-class">Book a class</a>
                         </li>
                         <li class="site-item btn-toggle">
                             <a href="#" class="site-link">
