--- a/frontend-user-guides-post-detail.html
+++ b/frontend-user-guides-post-detail.html
@@ -53,7 +53,7 @@
                 <div class="external-links-box">
                     <ul class="site-list">
                         <li class="site-item">
-                            <a href="https://dfc.coredirection.com/" class="site-link book-class">Book a class</a>
+                            <a href="https://dfc.coredirection.com/" class="site-link book-class" target="_blank">Book a class</a>
                         </li>
                         <li class="site-item btn-toggle">
                             <a href="#" class="site-link">
@@ -335,10 +335,10 @@
                 <div class="links">
                     <p class="font-bold">Company</p>
                     <ul>
-                        <li>
-                            <a href="#">Home</a>
+                        <li class="">
+                            <a href="https://dfc.coredirection.com/" target="_blank">Home</a>
                         </li>
-                        <li>
+                        <li class="">
                             <a href="https://www.dubaifitnesschallenge.com/about-us/" target="_blank">About Us</a>
                         </li>
                         <li class="">
@@ -349,11 +349,11 @@
                 <div class="links">
                     <p class="font-bold">Explore</p>
                     <ul>
-                        <li>
-                            <a href="#">Locations</a>
+                        <li class="">
+                            <a href="https://dfc.coredirection.com/location" target="_blank">Locations</a>
                         </li>
-                        <li>
-                            <a href="#">Activity Listings</a>
+                        <li class="">
+                            <a href="https://dfc.coredirection.com/activity-listing" target="_blank">Activity Listings</a>
                         </li>
                         <li class="">
                             <a href="./index.html">Frontend User Guides</a>
@@ -366,16 +366,16 @@
                 <div class="links">
                     <p class="font-bold">FAQ & Legal</p>
                     <ul>
-                        <li>
-                            <a href="#">FAQ</a>
+                        <li class="">
+                            <a href="https://dfc.coredirection.com/faqs" target="_blank">FAQ</a>
                         </li>
-                        <li>
+                        <li class="">
                             <a href="https://www.dubaifitnesschallenge.com/privacy-policy/" target="_blank">Privacy Policy</a>
                         </li>
-                        <li>
+                        <li class="">
                             <a href="https://www.dubaifitnesschallenge.com/terms-conditions/" target="_blank">Terms & Conditions</a>
                         </li>
-                        <li>
+                        <li class="">
                             <a href="https://www.dubaifitnesschallenge.com/cookie-policy/" target="_blank">Cookie Policy</a>
                         </li>
                     </ul>
