--- a/facility-admin.html
+++ b/facility-admin.html
@@ -53,7 +53,7 @@
                 <div class="external-links-box">
                     <ul class="site-list">
                         <li class="site-item">
-                            <a href="https://dfc.coredirection.com/" class="site-link book-class">Book a class</a>
+                            <a href="https://dfc.coredirection.com/" class="site-link book-class" target="_blank">Book a class</a>
                         </li>
                         <li class="site-item btn-toggle">
                             <a href="#" class="site-link">
@@ -165,7 +165,7 @@
                     <p class="font-bold">Company</p>
                     <ul>
                         <li class="">
-                            <a href="#">Home</a>
+                            <a href="https://dfc.coredirection.com/" target="_blank">Home</a>
                         </li>
                         <li class="">
                             <a href="https://www.dubaifitnesschallenge.com/about-us/" target="_blank">About Us</a>
@@ -179,10 +179,10 @@
                     <p class="font-bold">Explore</p>
                     <ul>
                         <li class="">
-                            <a href="#">Locations</a>
+                            <a href="https://dfc.coredirection.com/location" target="_blank">Locations</a>
                         </li>
                         <li class="">
-                            <a href="#">Activity Listings</a>
+                            <a href="https://dfc.coredirection.com/activity-listing" target="_blank">Activity Listings</a>
                         </li>
                         <li class="">
                             <a href="./index.html">Frontend User Guides</a>
@@ -196,7 +196,7 @@
                     <p class="font-bold">FAQ & Legal</p>
                     <ul>
                         <li class="">
-                            <a href="#">FAQ</a>
+                            <a href="https://dfc.coredirection.com/faqs" target="_blank">FAQ</a>
                         </li>
                         <li class="">
                             <a href="https://www.dubaifitnesschallenge.com/privacy-policy/" target="_blank">Privacy Policy</a>
