--- a/post-detail.html
+++ b/post-detail.html
@@ -259,7 +259,7 @@
                                 <p class="subsection-title">Gallery Tab</p>
                                 <p class="subsection-desc">Here you can upload images of your facility and classes for users to see in the frontend booking application.</p>
                                 <p class="subsection-desc">Please note that you are representing a government entity, and any uploaded images must adhere to strict guidelines set by DTCM. Any breach of these guidelines will.</p>
-                                <p class="subsection-desc">The guidelines are as followed: XXX</p>
+                                <p class="subsection-desc">We ask you to upload images no larger than 1mb</p>
                                 <img src="./images/backend-post-detail/Gallery-Tab.png" width="677" class="section-img" alt="">
                             </div>
                         </div>
@@ -268,12 +268,20 @@
                             <div id="sub-section9" class="sub-section">
                                 <p class="subsection-title">Dashboard overview</p>
                                 <p class="subsection-desc">You can click the ‘Home’ Icon to get back to this view at any time. Here you can manage all of your bookings in one place.</p>
-                                <p class="subsection-desc"><strong>Filter results to find a class</strong></p>
-                                <p class="subsection-desc"><strong>Edit a class time and capacity</strong></p>
-                                <p class="subsection-desc"><strong>View booked users and check them in</strong></p>
-                                <p class="subsection-desc"><strong>Cancel a class</strong></p>
-                                <p class="subsection-desc"><strong>Book a class for a user</strong></p>
-                                <p class="subsection-desc"><strong>Select an instructor for a class.</strong></p>
+                                <ol class="dashboard-overview-list">
+                                    <li class="dashboard-overview-item">Filter results to find a class</li>
+                                    <li class="dashboard-overview-item" style="counter-increment: li;">.Edit a class time and capacity</li>
+                                    <li class="dashboard-overview-item">View booked users and check them in</li>
+                                    <li class="dashboard-overview-item">Cancel a class</li>
+                                    <li class="dashboard-overview-item">Book a class for a user</li>
+                                    <li class="dashboard-overview-item">Select an instructor for a class.</li>
+                                </ol>
+                                <!-- <p class="subsection-desc"><strong></strong></p>
+                                <p class="subsection-desc"><strong></strong></p>
+                                <p class="subsection-desc"><strong></strong></p>
+                                <p class="subsection-desc"><strong></strong></p>
+                                <p class="subsection-desc"><strong></strong></p>
+                                <p class="subsection-desc"><strong></strong></p> -->
                                 <img src="./images/backend-post-detail/Managing-bookings--Dashboard overview.png" width="677" class="section-img" alt="">
                             </div>
                             <div id="sub-section10" class="sub-section">
@@ -322,8 +330,8 @@
                             <div id="sub-section17" class="sub-section">
                                 <p class="subsection-title">Creating a class</p>
                                 <p class="subsection-desc">To create a class first you must create an ‘Activity’ and activity ‘zone’.</p>
-                                <p class="subsection-desc"><em>To find out how to create an activity <a href="#">click here</a></em></p>
-                                <p class="subsection-desc"><em>To find out how to create a zone <a href="#">click here</a></em></p>
+                                <p class="subsection-desc"><em>To find out how to create an activity <a href="#sub-section19">click here</a></em></p>
+                                <p class="subsection-desc"><em>To find out how to create a zone <a href="#sub-section18">click here</a></em></p>
                                 <p class="subsection-desc">Once these are created, in the left hand panel select ‘Schedule’ > ‘Schedule’ again > then ‘Add new’.</p>
                                 <p class="subsection-desc">You will then be prompted to input the event details.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class.gif" width="677" class="section-img" alt="">
