--- a/post-detail.html
+++ b/post-detail.html
@@ -158,9 +158,9 @@
                                             <li class="aside-subnav-item">
                                                 <a href="#sub-section19" class="aside-subnav-link">Creating an Activity</a>
                                             </li>
-                                            <!-- <li class="aside-subnav-item">
+                                            <li class="aside-subnav-item">
                                                 <a href="#sub-section20" class="aside-subnav-link">Instructions File</a>
-                                            </li> -->
+                                            </li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -270,7 +270,7 @@
                                 <p class="subsection-desc">You can click the ‘Home’ Icon to get back to this view at any time. Here you can manage all of your bookings in one place.</p>
                                 <ol class="dashboard-overview-list">
                                     <li class="dashboard-overview-item">Filter results to find a class</li>
-                                    <li class="dashboard-overview-item" style="counter-increment: li;">.Edit a class time and capacity</li>
+                                    <li class="dashboard-overview-item" style="counter-increment: li;">Edit a class time and capacity</li>
                                     <li class="dashboard-overview-item">View booked users and check them in</li>
                                     <li class="dashboard-overview-item">Cancel a class</li>
                                     <li class="dashboard-overview-item">Book a class for a user</li>
@@ -376,13 +376,12 @@
                                 <p class="subsection-desc">You can then enter the activity name and description and click ‘Save’.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Activity.png" width="677" class="section-img" alt="">
                             </div>
-                            <!-- <div id="sub-section20" class="sub-section">
+                            <div id="sub-section20" class="sub-section">
                                 <p class="subsection-title">Instructions File</p>
                                 <p class="subsection-desc">Instructions files are PDF’s that are attached to the users booking confirmation email. These can contain extra information about the activity such as what to bring and where to park. Instruction files are optional but recommended.</p>
                                 <p class="subsection-desc">Please upload your Instruction file in PDF Format with a file size no larger than 500kb.</p>
-                                <p class="subsection-desc">To download an instruction file template, <a href="#" download="doanload">click here</a></p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Instruction-file.png" width="677" class="section-img" alt="">
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
