--- a/post-detail.html
+++ b/post-detail.html
@@ -269,11 +269,11 @@
                                 <p class="subsection-title">Dashboard overview</p>
                                 <p class="subsection-desc">You can click the ‘Home’ Icon to get back to this view at any time. Here you can manage all of your bookings in one place.</p>
                                 <ol class="dashboard-overview-list">
-                                    <li class="dashboard-overview-item">Filter results to find a class</li>
-                                    <li class="dashboard-overview-item" style="counter-increment: li;">Edit a class time and capacity</li>
+                                    <li class="dashboard-overview-item">Book a class for a user</li>
+                                    <li class="dashboard-overview-item" style="counter-increment: li;">Filter results to find a class</li>
+                                    <li class="dashboard-overview-item">Edit a class time and capacity</li>
                                     <li class="dashboard-overview-item">View booked users and check them in</li>
                                     <li class="dashboard-overview-item">Cancel a class</li>
-                                    <li class="dashboard-overview-item">Book a class for a user</li>
                                     <li class="dashboard-overview-item">Select an instructor for a class.</li>
                                 </ol>
                                 <!-- <p class="subsection-desc"><strong></strong></p>
