--- a/post-detail.html
+++ b/post-detail.html
@@ -271,10 +271,10 @@
                                 <ol class="dashboard-overview-list">
                                     <li class="dashboard-overview-item">Book a class for a user</li>
                                     <li class="dashboard-overview-item" style="counter-increment: li;">Filter results to find a class</li>
+                                    <li class="dashboard-overview-item">Select an instructor for a class</li>
                                     <li class="dashboard-overview-item">Edit a class time and capacity</li>
                                     <li class="dashboard-overview-item">View booked users and check them in</li>
                                     <li class="dashboard-overview-item">Cancel a class</li>
-                                    <li class="dashboard-overview-item">Select an instructor for a class.</li>
                                 </ol>
                                 <!-- <p class="subsection-desc"><strong></strong></p>
                                 <p class="subsection-desc"><strong></strong></p>
