--- a/post-detail.html
+++ b/post-detail.html
@@ -339,7 +339,7 @@
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Facility.png" width="677" class="section-img" alt="">
                                 <p class="subsection-desc"><strong>Zone:</strong> Select the zone your activity will take place in, eg. HIIT Studio 1</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Zone.png" width="677" class="section-img" alt="">
-                                <p class="subsection-desc"><strong>Instructions file:</strong> Instructions files are PDF’s that are attached to the users booking confirmation email. These can contain extra information about the activity such as what to bring and where to park. Instruction files are optional but recommended. Find out more about instruction files here.</p>
+                                <p class="subsection-desc"><strong>Instructions file:</strong> Instructions files are PDF’s that are attached to the users booking confirmation email. These can contain extra information about the activity such as what to bring and where to park. Instruction files are optional but recommended. Find out more about instruction files <a href="#sub-section20">here</a>.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Instruction-file.png" width="677" class="section-img" alt="">
                                 <p class="subsection-desc"><strong>Activity:</strong> Select the activity that you created for the class.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Activity.png" width="677" class="section-img" alt="">
